# 2023WaterCode

./: .gitignore  CHANGELOG.md  MATEFloatDataVisualization.py  README.md  Sturgeon Data Visualizer.py
docker/: Dockerfile  Dockerfileorg  docker-run.sh
docker/files/: entrypoint.sh
fishROS_ws/: .gitignore  test.py
fishROS_ws/install/: local_setup.sh  setup.sh
fishROS_ws/log/: latest_build  latest_list  latest_test
fishROS_ws/src/controller_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
fishROS_ws/src/controller_node/controller_node/: controller_sub.py  drivetrain.py  thruster_interface.py  twist_drivetrain.py
fishROS_ws/src/cpp_pubsub/: CMakeLists.txt
fishROS_ws/src/cpp_pubsub/src/: publisher_member_function.cpp
fishROS_ws/src/drivetrain/: drivetrain.py
fishROS_ws/src/drivetrain_package/: package.xml  setup.cfg  setup.py
fishROS_ws/src/fish_cam/: package.xml  setup.cfg  setup.py
fishROS_ws/src/imu_publisher/: package.xml  setup.cfg  setup.py
fishROS_ws/src/internal_temp/: internal_temp_pub.py
fishROS_ws/src/launch/: launch.py
fishROS_ws/src/my_package/: CMakeLists.txt
fishROS_ws/src/my_python_package/: package.xml  setup.cfg  setup.py
fishROS_ws/src/ping2_sonar/: package.xml  setup.cfg  setup.py
fishROS_ws/src/ping2_sonar_msgs/: CMakeLists.txt  package.xml
scripts/: ROSStandard.sh  command_aliases.sh  deploy.sh  native_build.sh  pHtest.py  pHtest2.py  pwm_calibration_test.py  simpleThrusterTest.py  test_new_pwm.py  test_servo.py
sturgeonVisualization/: Sturgeon Data Visualizer 2.py
(+228 files in other folders)
